# rust_calculator

./: Cargo.toml  README.md
src/: ast.rs  bool_calculator.rs  context.rs  dumb_token.rs  f64_calculator.rs  float_calculator.rs  functions.rs  lambdas.rs  main.rs  operation.rs  operation_executor.rs  operations.rs  tests.rs  token.rs  tokens.rs  validator.rs
