[package]
name = "hello_world"
version = "0.1.0"
authors = ["rjhdby <andrewgrom@rambler.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
clap = "3.0.0-beta.2"
strum = "0.21"
strum_macros = "0.21"